--- a/public/index.html
+++ b/public/index.html
@@ -46,11 +46,11 @@
         </a>
         
         <div id="theme-switcher" class="theme-switcher">
-            <span class="icon moon">🌙</span>
+            <span class="icon moon">☾</span>
             <span class="switch">
                 <span class="thumb"></span>
             </span>
-            <span class="icon sun">☀️</span>
+            <span class="icon sun">☀</span>
         </div>
     </header>
     <div class="container">
